--- a/PanelProject/Panel1.xaml
+++ b/PanelProject/Panel1.xaml
@@ -5,8 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PanelProject"
         mc:Ignorable="d"
-        Title="Панель №1" Height="601.685" Width="495.365">
+        Title="Панель №1" Height="679.285" Width="495.365">
     <Grid>
+        <Label x:Name="label" Content="УПРАВЛЕНИЕ ПИТАНИЕМ МРЛС" HorizontalAlignment="Left" Margin="144,10,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label1" Content="СЕТЬ+РПУ" HorizontalAlignment="Left" Margin="42,50,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label2" Content="ДЭС+РПУ" HorizontalAlignment="Left" Margin="324,50,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label3" Content="ГОТОВ&#xD;&#xA;" HorizontalAlignment="Left" Margin="215,101,0,0" VerticalAlignment="Top" Height="25"/>
+        <Label x:Name="label4" Content="НЕИСПРАВНОСТЬ &#xD;&#xA;ИЗОЛЯЦИИ" HorizontalAlignment="Left" Margin="191,158,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label5" Content="ВКЛЮЧЕНИЕ РЕЖИМОВ" HorizontalAlignment="Left" Margin="168,236,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label6" Content="50 ГЦ" HorizontalAlignment="Left" Margin="215,295,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label7" Content="ОДИН ПЧ 400 ГЦ" HorizontalAlignment="Left" Margin="179,346,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label8" Content="ТРИ ПЧ 400 ГЦ" HorizontalAlignment="Left" Margin="197,404,0,0" VerticalAlignment="Top"/>
+        <Polygon x:Name="polygon" Fill="Brown"  Points="17, 0, 34, 10, 34, 30, 17, 40, 0, 30, 0, 10" Margin="374,477,72.8,50" RenderTransformOrigin="0.524,0.469"/>
+        <Image x:Name="image" Source="switchDown.png" HorizontalAlignment="Left" Height="84" Margin="19,468,0,0" VerticalAlignment="Top" Width="131"/>
+        <Label x:Name="label9" Content="ДИСТ" HorizontalAlignment="Left" Margin="29,430,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label10" Content="МЕСТ" HorizontalAlignment="Left" Margin="42,600,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label11" Content="ВЫКЛ" HorizontalAlignment="Left" Margin="155,528,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label12" Content="+27В" HorizontalAlignment="Left" Margin="401,430,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label13" Content="5А" HorizontalAlignment="Left" Margin="439,499,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
