--- a/PanelProject/Panel2.xaml
+++ b/PanelProject/Panel2.xaml
@@ -7,6 +7,22 @@
         mc:Ignorable="d"
         Title="Панель №2" Height="800.773" Width="490.309">
     <Grid>
+        <Label x:Name="label" Content="УПРАВЛЕНИЕ ПИТАНИЕМ ПсУ" HorizontalAlignment="Left" Margin="144,10,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label1" Content="СЕТЬ+РПУ" HorizontalAlignment="Left" Margin="42,50,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label2" Content="ДЭС+РПУ" HorizontalAlignment="Left" Margin="324,50,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label3" Content="ГОТОВ&#xD;&#xA;" HorizontalAlignment="Left" Margin="215,101,0,0" VerticalAlignment="Top" Height="25"/>
+        <Label x:Name="label4" Content="НЕИСПРАВНОСТЬ &#xD;&#xA;ИЗОЛЯЦИИ" HorizontalAlignment="Left" Margin="191,158,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label5" Content="ВКЛЮЧЕНИЕ РЕЖИМОВ" HorizontalAlignment="Left" Margin="168,236,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label6" Content="50 ГЦ" HorizontalAlignment="Left" Margin="215,295,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label8" Content="ТРИ ПЧ 400 ГЦ" HorizontalAlignment="Left" Margin="191,449,0,0" VerticalAlignment="Top"/>
+        <Polygon x:Name="polygon" Fill="Brown"  Points="17, 0, 34, 10, 34, 30, 17, 40, 0, 30, 0, 10" Margin="380,592,67,-64.8" RenderTransformOrigin="0.524,0.469"/>
+        <Polygon x:Name="polygon_Copy" Fill="Brown"  Points="17,0 34,10 34,30 17,40 0,30 0,10" Margin="380,592,62,56.2" RenderTransformOrigin="0.524,0.469"/>
+        <Image x:Name="image" Source="switchDown.png" HorizontalAlignment="Left" Height="84" Margin="48,617,0,0" VerticalAlignment="Top" Width="131"/>
+        <Label x:Name="label9" Content="ДИСТ" HorizontalAlignment="Left" Margin="35,545,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label10" Content="МЕСТ" HorizontalAlignment="Left" Margin="48,715,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label11" Content="ВЫКЛ" HorizontalAlignment="Left" Margin="161,643,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label12" Content="+27В" HorizontalAlignment="Left" Margin="407,545,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label13" Content="5А" HorizontalAlignment="Left" Margin="427,612,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
