--- a/PanelProject/App.xaml
+++ b/PanelProject/App.xaml
@@ -334,6 +334,26 @@
 
         <Style x:Key="PanelLabel" TargetType="{x:Type Label}">
             <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="FontSize" Value="12"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+        </Style>
+
+        <Style x:Key="RoundGreenLampOn" TargetType="{x:Type Ellipse}">
+            <Setter Property="Width" Value="20"/>
+            <Setter Property="Height" Value="20"/>
+            <Setter Property="Fill" Value="Green"/>
+            <Setter Property="Margin" Value="10" />
+            <Setter Property="Stroke" Value="Black"/>
+            <Setter Property="StrokeThickness" Value="1"/>
+        </Style>
+
+        <Style x:Key="RoundGreenLampOff" TargetType="{x:Type Ellipse}">
+            <Setter Property="Width" Value="20"/>
+            <Setter Property="Height" Value="20"/>
+            <Setter Property="Fill" Value="Yellow"/>
+            <Setter Property="Margin" Value="10" />
+            <Setter Property="Stroke" Value="Black"/>
+            <Setter Property="StrokeThickness" Value="1"/>
         </Style>
 
     </Application.Resources>
