--- a/PanelProject/App.xaml
+++ b/PanelProject/App.xaml
@@ -4,6 +4,9 @@
              xmlns:local="clr-namespace:PanelProject"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <Image x:Key="Image.Up" Source="images/switchUp.png"/>
+        <Image x:Key="Image.Down" Source="images/switchDown.png"/>
+        <Image x:Key="Image.Socket" Source="images/socket.png"/>
         <Style x:Key="FocusVisual">
             <Setter Property="Control.Template">
                 <Setter.Value>
@@ -63,15 +66,15 @@
         <SolidColorBrush x:Key="ButtonRectROff.Disabled.Border" Color="#FF520303"/>
         <SolidColorBrush x:Key="ButtonRectROff.Disabled.Foreground" Color="DarkRed"/>
 
-        <SolidColorBrush x:Key="Button.Static.Background" Color="White"/>
+        <SolidColorBrush x:Key="Button.Static.Background" Color="LightGray"/>
         <SolidColorBrush x:Key="Button.Static.Border" Color="White"/>
-        <SolidColorBrush x:Key="Button.MouseOver.Background" Color="White"/>
+        <SolidColorBrush x:Key="Button.MouseOver.Background" Color="LightGray"/>
         <SolidColorBrush x:Key="Button.MouseOver.Border" Color="White"/>
-        <SolidColorBrush x:Key="Button.Pressed.Background" Color="White"/>
+        <SolidColorBrush x:Key="Button.Pressed.Background" Color="LightGray"/>
         <SolidColorBrush x:Key="Button.Pressed.Border" Color="White"/>
-        <SolidColorBrush x:Key="Button.Disabled.Background" Color="White"/>
+        <SolidColorBrush x:Key="Button.Disabled.Background" Color="LightGray"/>
         <SolidColorBrush x:Key="Button.Disabled.Border" Color="White"/>
-        <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="White"/>
+        <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="LightGray"/>
 
         <Style x:Key="RoundButton" TargetType="{x:Type Button}">
             <Style.Resources>
@@ -354,6 +357,115 @@
             <Setter Property="Margin" Value="10" />
             <Setter Property="Stroke" Value="Black"/>
             <Setter Property="StrokeThickness" Value="1"/>
+        </Style>
+
+        <Style x:Key="RoundLampWithRing" TargetType="{x:Type Button}">
+
+            <Setter Property="Width" Value="23"/>
+            <Setter Property="Height" Value="23"/>
+            <Setter Property="IsEnabled" Value="False"/>
+
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Canvas Height="23" Width="23">
+                            <Ellipse Fill="Red" Height="23" Width="23" StrokeThickness="1" Stroke="Black"/>
+                            <Ellipse Fill="Red" Height="12" Width="12" StrokeThickness="2" Stroke="White" Canvas.Left="5.5" Canvas.Top="5.5"/>
+                        </Canvas>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+
+        </Style>
+
+        <Style x:Key="RectangleLampGreenOnDiff" TargetType="{x:Type Button}">
+            <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
+            <Setter Property="Content" Value=""/>
+            <Setter Property="Height" Value="45"/>
+            <Setter Property="Width" Value="45"/>
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="true">
+                            <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsDefaulted" Value="true">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border BorderBrush="Black" BorderThickness="2" Height="45" Width="45">
+                            <StackPanel>
+                                <Grid Background="White">
+                                    <Label Content="ГОТОВ" Style="{StaticResource PanelLabel}" FontWeight="Normal" FontSize="8"/>
+                                </Grid>
+                                <GridSplitter BorderBrush="Black" BorderThickness="1" ShowsPreview="False" HorizontalAlignment="Stretch" VerticalAlignment="Center" IsEnabled="False" />
+                                <Grid Background="LawnGreen">
+                                    <Label Content="ВКЛ" Style="{StaticResource PanelLabel}" FontWeight="Normal" FontSize="8"/>
+                                </Grid>
+                            </StackPanel>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="switchButton" TargetType="{x:Type Button}">
+            <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
+            <Setter Property="Height" Value="70"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="Background" Value="LightGray"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="true">
+                            <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter Property="Background" TargetName="border" Value="{StaticResource Button.MouseOver.Background}"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="true">
+                                <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Pressed.Background}"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Disabled.Background}"/>
+                                <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource Button.Disabled.Foreground}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="socketButton" TargetType="{x:Type Button}">
+            <Setter Property="Width" Value="30"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="IsEnabled" Value="False"/>
+
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Canvas Height="30" Width="30">
+                            <Ellipse Fill="White" Height="30" Width="30" StrokeThickness="2" Stroke="Black"/>
+                            <Ellipse Fill="Black" Height="12" Width="12" Canvas.Left="8.5" Canvas.Top="8.5"/>
+                        </Canvas>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
         </Style>
 
     </Application.Resources>
